rudimentary pagination. Super ugly. Also fix ingredient alignment on detail page

--- a/src/style/defaults.css
+++ b/src/style/defaults.css
@@ -79,6 +79,7 @@ ul {
 
 .drink-headline a {
   font-weight: bold;
+  font-size: 1.2em;
 }
 
 .drink-list li {
